2012-02-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/tests/gcc-torture-execute-pr42833.c:
	  don't redefine ssize_t if host already defines

	2012-02-12 Raphael Neider <rneider AT web.de>

	* src/pic14/pcode.c (newpCodeOpBit):
	  prevent SIGSEGV on copying temporary registers

	* src/pic14/gen.c (gen{,End}Function, gen{,End}Critical, genpic14Code),
	  src/pic16/gen.c (gen{,End}Function, gen{,End}Critical, genpic16Code):
	  implement __critical (block and function attribute, PIC14 limited to
	  no-arg functions: arg0 in W would be corrupted)

2012-02-12 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-pr42833.c,
	  support/regression/tests/gcc-torture-execute-pr44555.c,
	  support/regression/tests/gcc-torture-execute-pr48809.c,
	  support/regression/tests/gcc-torture-execute-pr48973-1.c,
	  support/regression/tests/gcc-torture-execute-pr48973-2.c,
	  support/regression/tests/gcc-torture-execute-pr49039.c,
	  support/regression/tests/gcc-torture-execute-pr49123.c,
	  support/regression/tests/gcc-torture-execute-pr49161.c,
	  support/regression/tests/gcc-torture-execute-pr49768.c:
	  Disable some tests for older gcc.

2012-02-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/sdbinutils/include/mach-o/*: added missing files for Mac OS

2012-02-12 Raphael Neider <rneider AT web.de>

	* src/pic14/gen.c (genGetABit, genpic14Code),
	  src/pic14/main.c (hasExtBitOp),
	  src/pic16/gen.c (genGetABit, genpic16Code),
	  src/pic16/main.c (hasExtBitOp):
	  implement GETABIT iCode, fixes #2986039

2012-02-11 Raphael Neider <rneider AT web.de>

	* device/include/pic16/signal.h:
	  explicitly access SFRs via access bank, closes #3482876

2012-02-11 Raphael Neider <rneider AT web.de>

	* device/include/pic14/pic14devices.txt,
	  device/non-free/include/pic14/pic16f1946.h,
	  device/non-free/include/pic14/pic16f1947.h,
	  device/non-free/lib/pic14/libdev/Makefile.in,